<resources>
    <string name="app_name">SocialX</string>

    <string name="btn_text_login">LOGIN</string>
    <string name="terms_condition"><u>terms &amp; condition</u></string>
    <string name="login_heading">SignIn into your account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_with">Login with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="create_an_account">Create an account</string>
    <string name="name_hint">Name</string>
    <string name="contact_hint">Contact</string>
    <string name="i_agree_with">I agree with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In!</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="newsImage">NewsImage</string>
</resources>